dovecot (1:1.0.3-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Sat, 04 Aug 2007 19:22:57 +0200

dovecot (1:1.0.0-1) unstable; urgency=low

  * New upstream release, the final 1.0.0. Bumped epoch, because we used the
    wrong version scheming in the past and I think it is worth to do so now
    that 1.0.0 has been released.
  * debian/watch: updated.
  * Rebuilt with a new glibc in unstable, now we have inotify support.
    (Closes: #395306)

 -- Fabio Tranchitella <kobold@debian.org>  Mon, 16 Apr 2007 08:42:32 +0200

dovecot (1.0.rc31-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Mon, 09 Apr 2007 11:55:45 +0200

dovecot (1.0.rc30-2) unstable; urgency=low

  * debian/dovecot-common.init: check if /etc/inetd.conf exists before
    calling sed on it. (Closes: #417299)

 -- Fabio Tranchitella <kobold@debian.org>  Sun, 08 Apr 2007 16:58:30 +0200

dovecot (1.0.rc30-1) unstable; urgency=low

  * New upstream release.
  * 

 -- Fabio Tranchitella <kobold@debian.org>  Sat, 07 Apr 2007 11:17:45 +0200

dovecot (1.0.rc29-1) unstable; urgency=low

  * New upstream release.
  * debian/rules: ship convert-tool in dovecot-common. (Closes: #416909)

 -- Fabio Tranchitella <kobold@debian.org>  Sat, 31 Mar 2007 14:15:39 +0200

dovecot (1.0.rc28-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Sun, 25 Mar 2007 14:02:28 +0200

dovecot (1.0.rc27-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Wed, 14 Mar 2007 14:39:04 +0100

dovecot (1.0.rc26-4) unstable; urgency=low

  * debian/dovecot-common.postinst: fixed a typo. (Closes: #414672)

 -- Fabio Tranchitella <kobold@debian.org>  Tue, 13 Mar 2007 08:45:47 +0100

dovecot (1.0.rc26-3) unstable; urgency=low

  * debian/control: depends on ucf (>= 2.0020). (Closes: #414032)