@@ -1,4 +1,10 @@
 SUBDIRS = src
 
 EXTRA_DIST = \
-	COPYING.LGPL
+	COPYING.LGPL \
+	ChangeLog
+
+if MAINTAINER_MODE
+ChangeLog: .hg/dirstate
+	hg log --style=changelog > ChangeLog
+endif
