@@ -1,4 +1,4 @@
-$Id: AUTHORS,v 1.1.1.1 2006-06-11 11:03:53 cras Exp $
+$Id$
 
 Larry Greenfield <leg+sieve@andrew.cmu.edu> wrote the first pass.
 
