@@ -1,6 +1,6 @@
 /* cmu-sieve
  * Larry Greenfield
- * $Id: COPYING,v 1.1.1.1 2006-06-11 11:03:53 cras Exp $
+ * $Id$
  */
 /***********************************************************
         Copyright 1998 by Carnegie Mellon University
