@@ -2,7 +2,7 @@
 /*
  * addr-lex.l -- RFC 822 address lexer
  * Ken Murchison
- * $Id: addr-lex.l,v 1.1.1.1 2006-06-11 11:03:53 cras Exp $
+ * $Id$
  */
 /***********************************************************
         Copyright 1999 by Carnegie Mellon University
