@@ -1,5 +1,5 @@
 # sieve_err.et -- Error codes for the Sieve subsystem
-# $Id: sieve_err.et,v 1.1.1.1 2006-06-11 11:03:54 cras Exp $
+# $Id$
 #
 # Copyright 2000 Carnegie Mellon University
 # 
