@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1.1.1 2006-06-11 11:03:53 cras Exp $
+$Id$
 
 CMU Sieve 2.1
 -------------
