@@ -1,8 +1,9 @@
 dovecot (1:1.0.3-1) unstable; urgency=low
 
   * New upstream release.
+  * dovecot-sieve: updated to the last hg's tip.
 
- -- Fabio Tranchitella <kobold@debian.org>  Sat, 04 Aug 2007 19:22:57 +0200
+ -- Fabio Tranchitella <kobold@debian.org>  Sat, 04 Aug 2007 19:27:15 +0200
 
 dovecot (1:1.0.0-1) unstable; urgency=low
 
